--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <img
           src="./assets/images/search-engine-optimization.jpg"
           class="float-left"
+          alt="pen and paper search engine optimization example"
         />
         <h2>Search Engine Optimization</h2>
         <p>
@@ -48,6 +49,7 @@
         <img
           src="./assets/images/online-reputation-management.jpg"
           class="float-right"
+          alt="chart of social media reputation going up"
         />
         <h2>Online Reputation Management</h2>
         <p>
@@ -62,6 +64,7 @@
         <img
           src="./assets/images/social-media-marketing.jpg"
           class="float-left"
+          alt="table with social media terms, share, like"
         />
         <h2>Social Media Marketing</h2>
         <p>
