added alts to side images

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     <aside class="benefits">
       <div class="benefit-item">
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" />
+        <img src="./assets/images/lead-generation.png"
+        alt="a cog above a funnel to show business coming directly" />
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
@@ -86,7 +87,8 @@
       </div>
       <div class="benefit-item">
         <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" />
+        <img src="./assets/images/brand-awareness.png"
+        alt="light bulb in a suit to show awareness" />
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
@@ -94,7 +96,8 @@
       </div>
       <div class="benefit-item">
         <h3>Cost Management</h3>
-        <img src="./assets/images/cost-management.png" />
+        <img src="./assets/images/cost-management.png"
+        alt="a cog with money around it " />
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
