--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <div class="hero"></div>
     <section class="content">
-      <div id="search-engine-optimization" class="search-engine-optimization">
+      <div id="search-engine-optimization" class="info-snippet">
         <img
           src="./assets/images/search-engine-optimization.jpg"
           class="float-left"
@@ -44,7 +44,7 @@
       </div>
       <div
         id="online-reputation-management"
-        class="online-reputation-management"
+        class="info-snippet"
       >
         <img
           src="./assets/images/online-reputation-management.jpg"
@@ -60,7 +60,7 @@
           business.
         </p>
       </div>
-      <div id="social-media-marketing" class="social-media-marketing">
+      <div id="social-media-marketing" class="info-snippet">
         <img
           src="./assets/images/social-media-marketing.jpg"
           class="float-left"
@@ -104,9 +104,9 @@
         </p>
       </div>
     </aside>
-    <div class="footer">
+    <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
     </div>
-  </body>
+    </footer>
 </html>
