--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <!-- header start -->
     <header class="header">
       <h1>Hori<span class="seo">seo</span>n</h1>
       <div>
@@ -27,6 +28,7 @@
       </div>
     </header>
     <div class="hero"></div>
+    <!-- primary content start -->
     <section class="content">
       <div id="search-engine-optimization" class="info-snippet">
         <img
@@ -75,6 +77,7 @@
         </p>
       </div>
     </section>
+    <!-- aside section start -->
     <aside class="benefits">
       <div class="benefit-item">
         <h3>Lead Generation</h3>
@@ -104,6 +107,7 @@
         </p>
       </div>
     </aside>
+    <!-- footer start -->
     <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
